# demo_ai

./: README.md  pyproject.toml  run.sh
demo_ai/: Experiments.ipynb  main.py  model.json
demo_ai/.ipynb_checkpoints/: Experiments-checkpoint.ipynb
demo_ai/cases/: linear_regression.py
demo_ai/models/: __init__.py
demo_ai/routes/: ml.py  sample.py
demo_ai/schemas/: __init__.py  ml.py
